--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,9 @@
 # Configuration de l'API Backend
 # Cette variable définit l'URL de base pour toutes les requêtes HTTP vers le backend
-# En développement : http://localhost:8000
-# En production : remplacer par l'URL réelle du serveur backend
-VITE_API_BASE_URL=http://localhost:8000
+# IMPORTANT: L'URL doit inclure le préfixe /api car toutes les routes backend sont montées sous /api
+# En développement : http://localhost:3000/api
+# En production : remplacer par l'URL réelle du serveur backend (ex: https://api.example.com/api)
+VITE_API_BASE_URL=http://localhost:3000/api
 
 # Configuration de l'environnement
 # Options : development | production | test
