--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,11 +44,13 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@pinia/testing": "^1.0.2",
     "@playwright/test": "^1.48.0",
     "@types/fabric": "^5.3.10",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^22.18.12",
     "@types/webfontloader": "^1.6.38",
+    "@vitest/coverage-v8": "^4.0.4",
     "@vue/test-utils": "^2.4.6",
     "jsdom": "^25.0.1",
     "vitest": "^2.1.9",
